--- a/app/assets/javascripts/visitor_kiosk/logout/view.html
+++ b/app/assets/javascripts/visitor_kiosk/logout/view.html
@@ -12,7 +12,7 @@
 	            	<input type="text" ng-model="kiosk_logout.visitor.identifiction_code" class="form-control">
 	            </div>
 	            <div class="form-group">
-            	<button class="btn btn-danger" ng-click="kiosk_logout.cancel()">Cancel</button>
+            	<!-- <button class="btn btn-danger" >Cancel</button> -->
             	
             	<button class="btn btn-success" ng-click="kiosk_logout.verify()">Verify</button>
             </div>
@@ -44,4 +44,7 @@
 			</div>
 		</div>
 	</div>	
+</div>
+<div class="navigation_wrapper">
+	<button class="home_btn pull-left" ng-click="kiosk_logout.cancel()"><i class="fa fa-arrow-left"></i></button>
 </div>
