--- a/app/assets/javascripts/visitor_kiosk/index/view.html
+++ b/app/assets/javascripts/visitor_kiosk/index/view.html
@@ -111,7 +111,7 @@
 			
 		</div>
 		<div class="navigation_wrapper">
-			<button class="home_btn pull-left" ui-sref="index"><i class="fa fa-home"></i></button>
+			<button class="home_btn2 pull-left" ui-sref="index"><i class="fa fa-home"></i></button>
 			<p class="clock_counter pull-right"><i class="fa fa-clock-o"></i> {{kiosk_index.clock | date:'hh:mm:ss a'}}</p>
 		</div>
 	</div>
