--- a/app/assets/javascripts/user/index/view.html
+++ b/app/assets/javascripts/user/index/view.html
@@ -113,7 +113,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-md-6" ng-if="user.modal.role!=1 && user.modal.role==1" >
+                    <div class="col-md-6" ng-if="user.modal.role!=1 && user.access==1" >
                         <div class="form-group">
                             <label class="control-label">Select Facility</label>
                             <select
