--- a/app/assets/javascripts/visitor_list/index/view.html
+++ b/app/assets/javascripts/visitor_list/index/view.html
@@ -51,14 +51,17 @@
               <img ng-src="./secret_upload/{{visitorList.data.info.image}}" height="200px">
               <br>
               <h1>{{visitorList.data.info.fullname}}</h1>
-             <table class="table table-bordered">
-               <tr>
-                 <td>asas</td>
-                 <td>asas</td>
-                 <td>asas</td>
-                 <td>asas</td>
-               </tr>
-             </table>
+              <div class="col-sm-12">
+                <table class="table table-bordered">
+                 <tr>
+                   <td>asas</td>
+                   <td>asas</td>
+                   <td>asas</td>
+                   <td>asas</td>
+                 </tr>
+               </table> 
+              </div>
+               
             </div>
           </div>
           
