--- a/app/assets/javascripts/public/main/view.html
+++ b/app/assets/javascripts/public/main/view.html
@@ -1,42 +1,35 @@
-<div class="receptionist_wrapper">
-	<div ui-view>
+<div ui-view>
+	<div class="receptionist_wrapper">
+	
 		<div class="center_display">
-			<h1 class="text-center" style="font-weight: bold">{{kiosk_index.facility}}</h1>
-			<div ng-if="kiosk_index.stage == 1" class="quick_touch_icon_wrapper">
+			<h1 class="text-center" style="font-weight: bold">{{public_main_kiosk.facility}}</h1>
+			<div ng-if="public_main_kiosk.stage == 1" class="quick_touch_icon_wrapper">
 				<div class="quick_touch pull-left">
 					<div class="quick_button text-center" ng-click="kiosk_index.search_visitor()">
 						<i class="fa fa-5x fa-search"></i>
 						<br>
 						<br>
-						<p>Search Visitors</p>
+						<p>Existing Visitor</p>
 					</div>
 				</div>
-				<!-- <div class="quick_touch pull-left">
+				<div class="quick_touch pull-left" ui-sref="self-assesment.new_visitor">
 					<div class="quick_button text-center" ng-click="kiosk_index.new_visitor()">
 						<i class="fa fa-5x fa-user-plus"></i>
 						<br>
 						<br>
-						<p>Log In Visitor</p>
-					</div>
-				</div> -->
-				<div class="quick_touch pull-left">
-					<div class="quick_button text-center" ui-sref="kiosk.visitors_que">
-						<i class="fa fa-5x fa-user-circle"></i>
-						<br>
-						<br>
-						<p>Visitors</p>
+						<p>New Visitor</p>
 					</div>
 				</div>
 				<div class="quick_touch pull-left">
-					<div class="quick_button text-center" ng-click="kiosk_index.logout_visitor()">
-						<i class="fa fa-5x fa-sign-out"></i>
+					<div class="quick_button text-center" data-toggle="modal" data-target="#procedure_bapp">
+						<i class="fa fa-5x fa-info-circle"></i>
 						<br>
 						<br>
-						<p>Log Out Visitors</p>
+						<p>Information</p>
 					</div>
 				</div>
 			</div>
-			<div ng-if="kiosk_index.stage ==2" class="new_visitor_wrapper">
+			<div ng-if="public_main_kiosk.stage ==2" class="new_visitor_wrapper">
 				<form ng-submit="kiosk_index.loginVisitor()">
 					<div class="row">
 						<div class="col-sm-4">
@@ -119,53 +112,15 @@
 			
 		</div>
 		<div class="navigation_wrapper">
-			<button class="home_btn2 pull-left" ui-sref="index"><i class="fa fa-home"></i></button>
-			<p class="clock_counter pull-right"><i class="fa fa-clock-o"></i> {{kiosk_index.clock | date:'hh:mm:ss a'}}</p>
+			<!-- <button class="home_btn2 pull-left" ui-sref="index"><i class="fa fa-home"></i></button> -->
+			<p class="clock_counter pull-right"><i class="fa fa-clock-o"></i> {{public_main_kiosk.clock | date:'hh:mm:ss a'}}</p>
 		</div>
 	</div>
 </div>
-
-
-<div class="modal fade" id="takePicture" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="procedure_bapp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content text-center">
-        	<br>
-        	<button class="btn btn-info" ng-click="kiosk_index.loadOtherCam(a)" ng-repeat="a in kiosk_index.devices">Camera {{$index+1}}</button>
-           <div class="camera_wrapper text-center">
-                <div class="camera_container text-center">
-                	<img class="poto_preview" ng-if="kiosk_index.visitor.visitor_img" ng-src="{{kiosk_index.visitor.visitor_img}}">
-                    <canvas id="canvass" height="262" width="350" style="visibility: hidden"></canvas>
-                    <video ng-if="!kiosk_index.visitor.visitor_img" id="video" height="262" width="350" autoplay></video>
-                </div>
-            </div>
-            <div class="form-group">
-            	<button class="btn btn-danger" ng-click="kiosk_index.cancelCamera()">Cancel</button>
-            	<button ng-if="kiosk_index.visitor.visitor_img" class="btn btn-primary" ng-click="kiosk_index.reTake()">Retake</button>
-            	<button ng-if="!kiosk_index.visitor.visitor_img" class="btn btn-primary" ng-click="kiosk_index.takePicture()">Capture</button>
-            	<button class="btn btn-success" ng-click="kiosk_index.confirm()">Confirm</button>
-            </div>
-		</div>
-	</div>
-</div>
-<div class="modal fade" id="qrCamera" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content text-center">
-        	<br>
-        	<button class="btn btn-info" ng-click="kiosk_index.loadOtherQrCam($index)" ng-repeat="a in kiosk_index.qrcams">Camera {{$index+1}}</button>
-           <div class="camera_wrapper text-center">
-                <div class="camera_container text-center">
-                	<video id="qrcam" height="262" width="350" autoplay></video>
-                </div>
-                <div class="form-group">
-	            	<input type="text" ng-model="kiosk_index.visitor.identifiction_code" class="form-control">
-	            </div>
-            </div>
-            
-            <div class="form-group">
-            	<button class="btn btn-danger" ng-click="kiosk_index.cancelQRCamera()">Cancel</button>
-            	
-            	<button class="btn btn-success" ng-click="kiosk_index.confirmQrCode()">Confirm</button>
-            </div>
+        	<img src="./images/bisitapp_step.jpg" style="width:100%">
 		</div>
 	</div>
 </div>
