--- a/app/assets/javascripts/visitor_kiosk/logout/view.html
+++ b/app/assets/javascripts/visitor_kiosk/logout/view.html
@@ -46,5 +46,5 @@
 	</div>	
 </div>
 <div class="navigation_wrapper">
-	<button class="home_btn pull-left" ng-click="kiosk_logout.cancel()"><i class="fa fa-arrow-left"></i></button>
+	<button class="home_btn2 pull-left" ng-click="kiosk_logout.cancel()"><i class="fa fa-arrow-left"></i></button>
 </div>
