--- a/app/assets/javascripts/visitor_kiosk/search/view.html
+++ b/app/assets/javascripts/visitor_kiosk/search/view.html
@@ -50,7 +50,7 @@
 	</div>	
 </div>
 <div class="navigation_wrapper">
-	<button class="home_btn pull-left" ui-sref="kiosk"><i class="fa fa-arrow-left"></i></button>
+	<button class="home_btn2 pull-left" ui-sref="kiosk"><i class="fa fa-arrow-left"></i></button>
 	
 </div>
 
