--- a/app/assets/javascripts/public/index/view.html
+++ b/app/assets/javascripts/public/index/view.html
@@ -79,8 +79,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="form-group">
-					<a ng-click="public_kiosk
-					.openCamera()" class="btn btn-success btn-block">Take Photo</a>
+					<a ng-click="public_kiosk.openCamera()" class="btn btn-success btn-block">Take Photo</a>
 				</div>
 			</div>
 			<div class="col-sm-4">
@@ -91,27 +90,7 @@
 	</div>
 </div>
 <div class="navigation_wrapper2">
-	<button class="btn btn-danger home_btn" ng-click="public_kiosk.cancel()"> CANCEL </button>
+	<button class="btn btn-danger home_btn" ui-sref="self-assesment"> CANCEL </button>
 	<button ng-show="public_kiosk.step==1" class="btn btn-success home_btn pull-right" ng-click="public_kiosk.submitVisitorProfile()"> CONTINUE </button>
 </div>
-<div class="modal fade" id="takePicture2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content text-center">
-        	<br>
-        	<button class="btn btn-info" ng-click="public_kiosk.loadOtherCam(a)" ng-repeat="a in public_kiosk.devices">Camera {{$index+1}}</button>
-           <div class="camera_wrapper text-center">
-                <div class="camera_container text-center">
-                	<img class="poto_preview" ng-if="public_kiosk.visitor.visitor_img" ng-src="{{public_kiosk.visitor.visitor_img}}">
-                    <canvas id="canvass" height="262" width="350" style="visibility: hidden"></canvas>
-                    <video ng-if="!public_kiosk.visitor.visitor_img" id="video2" height="262" width="350" autoplay></video>
-                </div>
-            </div>
-            <div class="form-group">
-            	<button class="btn btn-danger" ng-click="public_kiosk.cancelCamera()">Cancel</button>
-            	<button ng-if="public_kiosk.visitor.visitor_img" class="btn btn-primary" ng-click="public_kiosk.reTake()">Retake</button>
-            	<button ng-if="!public_kiosk.visitor.visitor_img" class="btn btn-primary" ng-click="public_kiosk.takePicture()">Capture</button>
-            	<button class="btn btn-success" ng-click="public_kiosk.confirm()">Confirm</button>
-            </div>
-		</div>
-	</div>
-</div>
+<web-camera ng-if="public_kiosk.camera"></web-camera>	
