--- a/app/assets/javascripts/visitor_kiosk/visitors_que/view.html
+++ b/app/assets/javascripts/visitor_kiosk/visitors_que/view.html
@@ -18,8 +18,6 @@
 		        </div>	
 			</div>	
 		</div>
-		
-		
 	</div>
 </div>
 <div class="navigation_wrapper">
@@ -27,6 +25,7 @@
 	<!-- <button class="home_btn2 pull-left" ui-sref="kiosk" style="margin-left:10px"><i class="fa fa-search"></i></button> -->
 	<p style="width:200px" class="clock_counter pull-right"><i class="fa fa-user-circle"></i> {{visitors_que.collections.length}}</p>
 </div>
+<qr-camera></qr-camera>
 <!-- <div class="floatingSearchWindow">
 	<form role="form" class="form-inline">
         <div class="form-group">
@@ -35,7 +34,7 @@
        	<button class="btn btn-danger" type="submit"><i class="fa fa-times"></i></button>
     </form>
 </div> -->
-<div class="modal fade" id="visitorInformationB" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<!-- <div class="modal fade" id="visitorInformationB" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content text-center">
       <div class="row">
@@ -82,8 +81,8 @@
 
     </div>
   </div>
-</div>
-<div class="modal fade" id="qrCamera99B" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+</div> -->
+<!-- <div class="modal fade" id="qrCamera99B" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content text-center">
       <br>
@@ -104,4 +103,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
