--- a/app/assets/javascripts/public/index/view.html
+++ b/app/assets/javascripts/public/index/view.html
@@ -91,7 +91,7 @@
 	</div>
 </div>
 <div class="navigation_wrapper2">
-	<a class="btn btn-danger home_btn" ui-sref="self-assesment"> CANCEL </a>
+	<a class="btn btn-danger home_btn" ng-click="public_kiosk.dismiss()"> CANCEL </a>
 	<button type="submit" ng-show="public_kiosk.step==1" class="btn btn-success home_btn pull-right" > CONTINUE </button>
 </div>
 </form>
