--- a/app/assets/javascripts/visitor_kiosk/logout/view.html
+++ b/app/assets/javascripts/visitor_kiosk/logout/view.html
@@ -1,5 +1,5 @@
 <div class="logout_wrapper">
-	<div class="visitorInfo" ng-if="!kiosk_logout.qrcamera_window">
+	<div class="visitorInfo" ng-if="kiosk_logout.infoWindow">
 		<div class="col-sm-4">
 			<img class="img-responsive" src="./secret_upload/steve.jpg">
 		</div>
