--- a/app/assets/javascripts/user/index/view.html
+++ b/app/assets/javascripts/user/index/view.html
@@ -92,7 +92,7 @@
 <div class="modal fade" id="createUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form>
+            <form name="newUserForm">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">User Information</h4>
@@ -169,8 +169,8 @@
         </div>
         <div class="modal-footer">
             <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
-            <button ng-if="user.mode=='create'" type="submit" ng-click="user.create(user.modal)" class="btn btn-success">Save</button>
-            <button ng-if="user.mode=='update'" type="submit" class="btn btn-success" ng-click="user.update(user.modal)">Update</button>
+            <button ng-if="user.mode=='create'" type="submit" ng-click="user.create(user.modal)" class="btn btn-success" ng-disabled="newUserForm.$invalid">Save</button>
+            <button ng-if="user.mode=='update'" type="submit" class="btn btn-success" ng-click="user.update(user.modal)" ng-disabled="newUserForm.$invalid">Update</button>
         </div>
     </form>
 </div>
