--- a/app/assets/javascripts/shared/body/view.html
+++ b/app/assets/javascripts/shared/body/view.html
@@ -8,7 +8,7 @@
                                 <h5>Visitors</h5>
                             </div>
                             <div class="ibox-content">
-                                <h1 class="no-margins">40 886,200</h1>
+                                <h1 class="no-margins">{{$ctrl.test}}</h1>
                                 
                                 <small>Total income</small>
                             </div>
