--- a/app/assets/javascripts/facility/index/view.html
+++ b/app/assets/javascripts/facility/index/view.html
@@ -16,8 +16,8 @@
     	                <tbody>
     	               		<tr class="read" ng-repeat="a in facility.lists">
     		                    <td>{{a.id}}</td>
-    		                    <td class="mail-contact"><a href="mail_detail.html">{{a.name}}</a></td>
-    		                    <td class="mail-subject"><a href="mail_detail.html">{{a.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</a></td>
+    		                    <td class="mail-contact"><a>{{a.name}}</a></td>
+    		                    <td class="mail-subject"><a>{{a.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</a></td>
     		                </tr>
     	                </tbody>
                     </table>
