--- a/app/assets/javascripts/user/index/view.html
+++ b/app/assets/javascripts/user/index/view.html
@@ -164,7 +164,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Contact Number: <small>Must begin 63 not 0 e.g 63915 000 1111</small></label>
-                <input type="text" maxlength="12" minlength="12" ng-model="user.modal.mobile" class="form-control" required>
+                <input type="text" ng-model="user.modal.mobile" class="form-control">
             </div>
         </div>
         <div class="modal-footer">
