--- a/app/assets/javascripts/shared/body/view.html
+++ b/app/assets/javascripts/shared/body/view.html
@@ -77,6 +77,18 @@
                         <small>Total</small>
                     </div>
                 </div>
+                <div class="ibox float-e-margins" ng-if="$ctrl.data.facilities">
+                    <div class="ibox-title">
+                        <span class="label label-success pull-right">All</span>
+                        <h5>Facilities</h5>
+                    </div>
+                    <div class="ibox-content">
+                        <h1 class="no-margins">{{$ctrl.data.facilities}}</h1>
+                        
+                        <small>Total</small>
+                    </div>
+                </div>
+
             </div>
             <div class="col-lg-9">
                 <h1>CHart</h1>    
