working service logout

--- a/app/assets/javascripts/visitor_kiosk/logout/view.html
+++ b/app/assets/javascripts/visitor_kiosk/logout/view.html
@@ -1,7 +1,7 @@
 <div class="logout_wrapper">
 	<div class="visitorInfo" ng-if="kiosk_logout.infoWindow">
 		<div class="col-sm-4">
-			<img class="img-responsive" src="./secret_upload/steve.jpg">
+			<img class="img-responsive" ng-src="./secret_upload/{{kiosk_logout.visitor_info.image}}">
 		</div>
 		<div class="col-sm-8">
 			<div style="border-bottom:1px solid #6d839b;padding: 10px 0">
